--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 
 body{
     background-image: linear-gradient(to right, #fadb93, #ebdab3);
-    margin: 0;
     padding: 0;
     overflow: hidden;
 }
@@ -28,6 +27,7 @@ button {
     transition: background-color 0.5s ease-in;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     margin-top: 15px;
+    margin-left: 10px;
 }
 
 button:hover {
@@ -44,3 +44,71 @@ button:hover {
 }
 
 
+/*---------------------------------------------------------------------*/
+
+.corner-indicator {
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+    width: 95px;
+    height:95px;
+    overflow: hidden;
+}
+
+
+.vertical-bar {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 5px;
+    height: 100%;
+    background-color: rgb(233, 111, 138); 
+    
+}
+.horizontal-bar {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 5px;
+    background-color: rgb(233, 111, 138); 
+  
+}
+
+.glow {
+    box-shadow: 0 0 5px 2.5px rgb(240, 121, 149);
+}
+
+.corner-indicator2 {
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+    width: 75px;
+    height:75px;
+    overflow: hidden;
+    margin-bottom: 41%;
+    transform: rotate(270deg);
+}
+
+.corner-indicator3 {
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+    width: 75px;
+    height:75px;
+    overflow: hidden;
+    margin-bottom: 41%;
+    margin-right: 94.5%;
+    transform: rotate(180deg);
+}
+
+.corner-indicator4 {
+    position: fixed;
+    bottom: 5px;
+    right: 5px;
+    width: 75px;
+    height:75px;
+    overflow: hidden;
+    margin-right: 94.5%;
+    transform: rotate(90deg);
+}
